--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="HeatApp">
   <head>
     <title>Heatapp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
+
     <style>
-      .container {
-        max-width: 1000px;
-      }
+      body, html, h2 { margin:0; padding:0; height:100%;}
+      #heatmapContainer { width:100%; height:100%;}
+      #heatmapContainerSim { width:100%; height:100%;}
+      .hello { width:600px; height:450px;}
     </style>
+
+
   </head>
-  <body>
-    <div class="container">
-      <h1>HeatMap Datacenter</h1>
-      <form role="form" method='POST' action='/'>
-        <div class="form-group">
-          <input type="text" name="url" class="form-control" id="url-box" placeholder="Enter URL..." style="max-width: 300px;">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <br>
-      {% for error in errors %}
-        <h4>{{ error }}</h4>
-      {% endfor %}
+  <body ng-controller="HeatAppController">
+
+    <div>
+      <md-content class="md-padding">
+        <md-tabs md-dynamic-height md-border-bottom>
+          <md-tab label="data">
+            <md-content class="md-padding">
+              <div class="hello">
+                <heatmap val="t"></heatmap>
+              </div>
+                <div layout="row">
+                    <div flex="10" layout layout-align="center center">
+                        <span class="md-body-1">Number of time steps </span>
+                    </div>
+                    <md-slider flex md-discrete ng-model="t" step="1" min="0" max="2843" aria-label="time-step">
+                    </md-slider>
+
+                    <md-input-container>
+                    <input type="number" step="any" name="time-step" ng-model="t" min="0" max="2843">
+                    </md-input-container>
+                </div>
+            </md-content>
+          </md-tab>
+          <md-tab label="simulator">
+            <md-content class="md-padding">
+                    <div layout="row">
+                    <md-input-container>
+                    <label>AHU 1 temperatue (C)</label>
+                    <input type="number" step="any" name="time-step" ng-model="ahus.ahu_1_outlet" min="1" max="40">
+                    </md-input-container>
+                    <md-input-container>
+                    <label>AHU 2 temperatue (C)</label>
+                    <input type="number" step="any" name="time-step" ng-model="ahus.ahu_2_outlet" min="1" max="40">
+                    </md-input-container>
+                    <md-input-container>
+                    <label>AHU 3 temperatue (C)</label>
+                    <input type="number" step="any" name="time-step" ng-model="ahus.ahu_3_outlet" min="1" max="40">
+                    </md-input-container>
+                    <md-input-container>
+                    <label>AHU 4 temperatue (C)</label>
+                    <input type="number" step="any" name="time-step" ng-model="ahus.ahu_4_outlet" min="1" max="40">
+                    </md-input-container>
+                    </div>
+              <div class="hello">
+                <heatmap-sim val="t2"></heatmap-sim>
+              </div>
+                <div layout>
+                    <div flex="10" layout layout-align="center center">
+                        <span class="md-body-1">Number of time steps </span>
+                    </div>
+                    <md-slider flex md-discrete ng-model="t3" step="1" min="0" max="2843" aria-label="time-step">
+                    </md-slider>
+
+                    <md-input-container>
+                    <input type="number" step="any" name="time-step" ng-model="t3" min="0" max="2843">
+                    </md-input-container>
+                </div>
+            </md-content>
+          </md-tab>
+        </md-tabs>
+      </md-content>
     </div>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+     <!-- Angular Material Dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+
+
+    <!-- Angular Material Javascript now available via Google CDN; version 0.8 used here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
+    <script src="{{ url_for('static', filename='heatmap.js') }}"></script>
+    <script src="{{ url_for('static', filename='heatmap_main.js') }}"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
   </body>
 </html>
