--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <title>Heatapp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
+    <link href={{ url_for('static', filename='./bower_components/bootstrap/dist/css/bootstrap.min.css') }} rel="stylesheet" media="screen">
+    <link href={{ url_for('static', filename='./bower_components/angular-material/angular-material.min.css') }} rel="stylesheet" media="screen">
 
     <style>
       body, html, h2 { margin:0; padding:0; height:100%;}
@@ -80,13 +80,13 @@
     </div>
 
      <!-- Angular Material Dependencies -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+     <script src="{{ url_for('static', filename='./bower_components/angular/angular.min.js') }}"></script>
+     <script src="{{ url_for('static', filename='./bower_components/angular-animate/angular-animate.min.js') }}"></script>
+     <script src="{{ url_for('static', filename='./bower_components/angular-aria/angular-aria.min.js') }}"></script>
 
 
     <!-- Angular Material Javascript now available via Google CDN; version 0.8 used here -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
+    <script src="{{ url_for('static', filename='./bower_components/angular-material/angular-material.min.js') }}"></script>
     <script src="{{ url_for('static', filename='heatmap.js') }}"></script>
     <script src="{{ url_for('static', filename='heatmap_main.js') }}"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
