--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       body, html, h2 { margin:0; padding:0; height:100%;}
       #heatmapContainer { width:100%; height:100%;}
       #heatmapContainerSim { width:100%; height:100%;}
-      .hello { width:600px; height:450px;}
+      .hello { width:590px; height:490px; background-image: url("../static/layout.png")}
     </style>
 
 
